# fastapi.tiangolo.com-python-types

./: .editorconfig  README.md  get_full_name.py  get_items.py  get_name_with_age.py  pyproject.toml  ruff.toml
